rahti_yamls/4cat_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 4cat
  name: 4cat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 4cat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: 4cat
    spec:
      containers:
        - name: 4cat-backend
          command:
            - "docker/docker-entrypoint.sh"
          image: 'image-registry.apps.2.rahti.csc.fi/4cat-fi/4cat_fi:1.0'
          ports:
            - containerPort: 4444
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/data
              name: data-volume
            - mountPath: /usr/src/app/config
              name: config-volume
            - mountPath: /usr/src/app/logs
              name: logs-volume
        - name: 4cat-frontend
          args:
            ["docker/wait-for-backend.sh"]
          image: 'image-registry.apps.2.rahti.csc.fi/4cat-fi/4cat_fi:1.0'
          ports:
            - containerPort: 5000
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/data
              name: data-volume
            - mountPath: /usr/src/app/config
              name: config-volume
            - mountPath: /usr/src/app/logs
              name: logs-volume
 
      restartPolicy: Always
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-volume
